--- a/h8dsft_ngc_python_syntax_and_variable.ipynb.ipynb
+++ b/h8dsft_ngc_python_syntax_and_variable.ipynb.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -85,23 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
     }
    ],
    "source": [
     "Data = [1, 4, 9, 16, 25, 36, 49,  64, 81, 100]\n",
-    "Data"
+    "print(Data)"
    ]
   },
   {
@@ -113,22 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
     }
    ],
    "source": [
-    "Data[3]"
+    "print(Data[3])"
    ]
   },
   {
@@ -140,11 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "Data[::-1]"
+    "print(Data[-5:])"
    ]
   },
   {
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +167,7 @@
        "[100, 81, 64, 49, 36, 25, 16, 9, 4, 1]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,28 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Nanggroe Aceh Darussalam': 'Aceh',\n",
-       " 'Sumatera Selatan': 'Palembang',\n",
-       " 'Kalimantan Barat': 'Pontianak',\n",
-       " 'Jawa Timur': 'Madiun',\n",
-       " 'Sulawesi Selatan': 'Makassar',\n",
-       " 'Maluku': 'Ambon'}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nanggroe Aceh Darussalam': 'Aceh', 'Sumatera Selatan': 'Palembang', 'Kalimantan Barat': 'Pontianak', 'Jawa Timur': 'Madiun', 'Sulawesi Selatan': 'Makassar', 'Maluku': 'Ambon'}\n"
+     ]
     }
    ],
    "source": [
-    "provinsi = {'Nanggroe Aceh Darussalam': 'Aceh','Sumatera Selatan': 'Palembang','Kalimantan Barat': 'Pontianak','Jawa Timur': 'Madiun','Sulawesi Selatan': 'Makassar','Maluku': 'Ambon'}\n",
-    "provinsi"
+    "provinsi = {'Nanggroe Aceh Darussalam': 'Aceh',\n",
+    "            'Sumatera Selatan': 'Palembang',\n",
+    "            'Kalimantan Barat': 'Pontianak',\n",
+    "            'Jawa Timur': 'Madiun',\n",
+    "            'Sulawesi Selatan': 'Makassar',\n",
+    "            'Maluku': 'Ambon'}\n",
+    "print(provinsi)"
    ]
   },
   {
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +229,7 @@
        " 'Maluku']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,35 +256,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Nanggroe Aceh Darussalam': 'Aceh',\n",
-       " 'Sumatera Selatan': 'Palembang',\n",
-       " 'Kalimantan Barat': 'Pontianak',\n",
-       " 'Jawa Timur': 'Surabaya',\n",
-       " 'Sulawesi Selatan': 'Makassar',\n",
-       " 'Maluku': 'Ambon'}"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nanggroe Aceh Darussalam': 'Aceh', 'Sumatera Selatan': 'Palembang', 'Kalimantan Barat': 'Pontianak', 'Jawa Timur': 'Surabaya', 'Sulawesi Selatan': 'Makassar', 'Maluku': 'Ambon'}\n"
+     ]
     }
    ],
    "source": [
-    "provinsi"
+    "print(provinsi)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
