--- a/h8dsft_ngc_python_syntax_and_variable.ipynb.ipynb
+++ b/h8dsft_ngc_python_syntax_and_variable.ipynb.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,19 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['B818', 'A461', 'A092', 'A082', 'B341', 'A005', 'B219', 'B904', 'A901', 'A083', 'B821', 'B439'] "
+      "['B821', 'B439', 'A092', 'B904', 'A461', 'A005', 'A901', 'A082', 'A083', 'B818', 'B219', 'B341'] "
      ]
     }
    ],
    "source": [
-    "customer_unique_2 = list(dict.fromkeys(customer_id))\n",
+    "customer_unique_2 = list(set(customer_id))\n",
     "print(customer_unique_2, end = ' ')\n",
     "#dict.fromkeys comamnds are use to turn list into dictionary and eliminating the duplicate since\n",
     "#dictionary can't have a duplicate"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "12"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
