--- a/h8dsft_testing.ipynb
+++ b/h8dsft_testing.ipynb
@@ -4,23 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NGC 3\n",
-    "\n",
-    "## Task\n",
-    "Create a library catalog system using OOP. The system should allow users to add books to the catalog, search for books by title or author, and remove books from the catalog.\n",
-    "\n",
-    "Requirements:\n",
-    "- Each book should have a title, author, and unique identifier\n",
-    "- The system should provide the following functionality:\n",
-    "  - Adding a book to the catalog.\n",
-    "  - Searching for books by title or author.\n",
-    "  - Removing a book from the catalog.\n",
-    "  - Displaying all books in the catalog."
+    "# NGC-04"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do unit testing for a library system from the previous NGC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,25 +52,17 @@
     "                        raise ValueError\n",
     "                \n",
     "        except ValueError: # Jika tidak ada buku dengan ISBN yang diinput\n",
-    "            print(\"There's no books with those ISBN number\")\n",
+    "            print(\"Error: There's no books with those ISBN number\")\n",
     "        \n",
     "    # Digunakan untuk mencari buku berdasarkan penulis    \n",
     "    def search_by_author(self, author):\n",
-    "        try:\n",
-    "            if not self.book_list: #Jika tidak ada buku di dalam katalog\n",
+    "        if not self.book_list: #Jika tidak ada buku di dalam katalog\n",
     "                print('There\\'s no books in the catalogue')\n",
     "\n",
-    "            else:\n",
-    "                for bks in self.book_list:\n",
-    "                    if bks.author.lower() == author.lower():\n",
-    "                        print(f'ISBN: {bks.isbn}, Title: {bks.title}')\n",
-    "                    \n",
-    "                    else: \n",
-    "                        raise NameError\n",
-    "                    \n",
-    "        # Jika tidak ada buku dengan penulis yang diinput\n",
-    "        except NameError:\n",
-    "            print('There\\'s no book with that title')\n",
+    "        else:\n",
+    "            for bks in self.book_list:\n",
+    "                 if bks.author.lower() == author.lower():\n",
+    "                    print(f'ISBN: {bks.isbn}, Title: {bks.title}')\n",
     "    \n",
     "    # Digunakan untuk display katalog\n",
     "    def display_book(self):\n",
@@ -82,8 +70,7 @@
     "            print('There\\'s no books added yet')\n",
     "        else:\n",
     "            for index, bks in enumerate(self.book_list):\n",
-    "                print(f'{index + 1}. {bks}')\n",
-    "                    "
+    "                print(f'{index + 1}. {bks}')"
    ]
   },
   {
@@ -92,7 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "perpustakaan = libraries()\n"
+    "perpustakaan = libraries()\n",
+    "perpustakaan.adding_book(1111, 'Animal Farm', 'George Orwell')"
    ]
   },
   {
@@ -104,38 +92,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There's no books in the catalogue\n"
+      "1. ISBN: 1111, Animal Farm by George Orwell\n"
      ]
     }
    ],
    "source": [
-    "perpustakaan.search_by_author('oo')"
+    "perpustakaan.display_book()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "perpustakaan.adding_book(1111, 'Men Without Women', 'Haruki Murakami')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. ISBN: 1111, Men Without Women by Haruki Murakami\n"
+      "Error: There's no books with those ISBN number\n"
      ]
     }
    ],
    "source": [
-    "perpustakaan.display_book()"
+    "# Unit Testing\n",
+    "perpustakaan.remove_book(1112)"
    ]
   },
   {
