--- a/h8dsft_testing.ipynb
+++ b/h8dsft_testing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,24 +75,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "perpustakaan = libraries()\n",
-    "perpustakaan.adding_book(1111, 'Animal Farm', 'George Orwell')"
+    "perpustakaan.adding_book(1111, 'Animal Farm', 'George Orwell')\n",
+    "perpustakaan.adding_book(1112, '1984', 'George Orwell')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. ISBN: 1111, Animal Farm by George Orwell\n"
+      "1. ISBN: 1111, Animal Farm by George Orwell\n",
+      "2. ISBN: 1112, 1984 by George Orwell\n"
      ]
     }
    ],
@@ -102,20 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: There's no books with those ISBN number\n"
+      "ISBN: 1111, Title: Animal Farm\n",
+      "ISBN: 1112, Title: 1984\n"
      ]
     }
    ],
    "source": [
     "# Unit Testing\n",
-    "perpustakaan.remove_book(1112)"
+    "perpustakaan.search_by_author('George Orwell')"
    ]
   },
   {
